--- a/src/components/style/HomePageCard.css
+++ b/src/components/style/HomePageCard.css
@@ -1,10 +1,10 @@
-.ListByView-cardAnime {
+.HomePageCardAnime {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.ListByView-image {
+.HomePageImage {
   width: 80%;
 }
