--- a/src/components/style/PageAnime.css
+++ b/src/components/style/PageAnime.css
@@ -20,6 +20,15 @@
     margin-left: auto;
     margin-right: auto;
   }
+  .PageAnime-titleAnime {
+  position: absolute;
+  color: white;
+  font-size: 1.8em;
+  font-weight: bold;
+  text-transform: capitalize;
+  padding-left: 17%;
+  top: 18.3em;
+  }
 }
 
 @media (max-width: 768px) {
